2007-06-15  Marcus Brinkmann  <marcus@g10code.de>

	* autogen.sh: Require bash.

2007-05-30  Werner Koch  <wk@g10code.com>

	* autogen.sh <--build-w32>: Modernize. 

2007-05-29  Werner Koch  <wk@g10code.com>

	* configure.ac: Require automake 1.10 and autoconf 2.61.
	(AM_PROG_CC_C_O): New.  Error out if no C-89 cc is installed.
	(gl_HEADER_SYS_SOCKET): Explicitly add this for documentation. 

2007-05-24  Werner Koch  <wk@g10code.com>

	* configure.ac: Use -Wpointer-arith is possible.

2006-11-22  Werner Koch  <wk@g10code.com>

	Released 1.0.1.

2006-11-21  Werner Koch  <wk@g10code.com>

	* configure.ac (AH_BOTTOM): Define PTH_SYSCALL_SOFT to 0.
	(AC_INIT): Use the SVN magic.

	* m4/gnupg-pth.m4 (GNUPG_PTH_VERSION_CHECK): Use --all with
	pth-config.

2006-11-15  Werner Koch  <wk@g10code.com>

	* autogen.sh: Add convenience option --build-amd64.

2006-10-31  Werner Koch  <wk@g10code.com>

	Released 1.0.0.

2006-10-20  Werner Koch  <wk@g10code.com>

	* Makefile.am (stowinstall): New convenience target.

2006-10-10  Werner Koch  <wk@g10code.com>

	Released 0.9.3.

	* tests/Makefile.am (LDADD): Add NETLIBS.

	* configure.ac: Check for cmsghdr.
	(USE_DESCRIPTOR_PASSING): Define it then.

2006-10-09  Werner Koch  <wk@g10code.com>

	* m4/gnupg-pth.m4: New.  Taked from GnuPG.

2006-10-04  Werner Koch  <wk@g10code.com>

	Released 0.9.2.
	
2006-10-04  Werner Koch  <wk@g10code.com>

	Released 0.9.1.
	
	* configure.ac (AB_INIT): New.

	* m4/autobuild.m4: New.

2006-09-19  Werner Koch  <wk@g10code.com>

	* tests/fdpassing.c: Reverted Marcus changes.
	(client): New arg FNAME to replace hardwired file name.
	(main): Pass motd to client.
	* tests/Makefile.am (AM_CPPFLAGS): Removed.
	(EXTRA_DIST): Add motd.

2006-09-19  Marcus Brinkmann  <marcus@g10code.de>

	* tests/fdpassing.c (MOTD): New macro.
	* tests/Makefile.am (AM_CPPFLAGS): New variable.
	* tests/motd: New file.

2006-09-14  Werner Koch  <wk@g10code.com>

	Released 0.9.0.
